--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@azure/app-configuration": "^1.1.0",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
